<resources>
    <string name="app_name">GasHere</string>
    <string name="title_activity_reference">ReferenceActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Iniciar Sesion</string>
    <string name="dont_have_account">¿No tienes cuenta?, </string>
    <string name="create_here">Crea una aquí</string>
    <string name="hint_firstName">Nombre</string>
    <string name="hint_LastName">Apellido</string>
    <string name="hint_email">Correo</string>
    <string name="hint_phoneNumber">Numero de Teléfono</string>
    <string name="hint_validationCode">Código de validación</string>
    <string name="text_button_register">Crear Cuenta</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_container">MainContainer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_container">ContainerActivity</string>
</resources>
